# traylib

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  test.cpp
docs/: coding-style.md  goals.md  libraries-used.md
src/: keyInput.cpp  logs.cpp  traylib.cpp  traylib.hpp
src/Editor/: editor.cpp
src/Engine/: traylib.cpp
src/Engine/Graphics/: renderer.cpp  window.cpp
src/Engine/Input/: keyInput.cpp
src/Engine/Utils/: logs.cpp
src/Runtime/: runtime.cpp
src/include/: Gameplay.hpp  Graphics.hpp  Input.hpp  Utils.hpp  glad.h  traylib.hpp
